--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lucide-react": "^0.560.0",
     "react": "^19.2.2",
     "react-dom": "^19.2.2",
+    "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.1.0"
   },
